# ByteWave

./: .gitignore  ByteWave.sln  ByteWave.vcxproj  ByteWave.vcxproj.filters  CMakeLists.txt  CONVENTIONS.md  README.md  TODO.md  build.zig  design.md  main.c  main.cpp  main.zig  meson.build  meson.options  mixer.excalidraw
ByteWave/: ByteWave.vcxproj  ByteWave.vcxproj.filters  MainWindow.cpp  MainWindow.h  Overview.txt  audioProcessing.cpp  audioProcessing.h  main.cpp
ByteWave/Audio/: asiolist.cpp
ByteWave/InternalAudio/: MixerTrack.cpp  MixerTrack.h  audioIO.cpp  audioIO.h
api/: bwaapi.h  design.md
api/wasapi/: WASAPI.cpp  WASAPI.h  wasapi_test.cpp
cmake_tools/: gitignore.cmake
data/: bw-config.md
driver/: WASAPI.cpp  WASAPI.h
error/: error.h
include/: bw-config.h  bw-conversions.h  bw-dynamic-array.h  bw-log.h  bw-schedule.h  bw-threads.h  bw-types.h  bw-ui.h  bw-win-consts.h  bw_types.h  bw_win_consts.h  config.h  conversions.h  log.h  pa_include.c  schedule.h  serializer.h  threads.h  types.h
include/win-utils/: win-consts.h  win-undef.h
lib/: asio.md
lib/ASIOSDK/host/pc/: asiolist.cpp
lib/portaudio/: pa_asio.cpp
lib/ui/: imconfig.h  imgui.h
lib/ui/glad/include/glad/: gl.h
lib/ui/glfw/: CMakeLists.txt
lib/ui/glfw/src/: win32_window.c
src/: audio-thread-mgr.cpp  audio-thread-mgr.h  eventloop.md  mixer.h
src/hostapi/: TODO.md  bw-hostapi.c  bw-hostapi.h  bw_hostapi.c  bw_hostapi.h  hostapi.cpp  hostapi.h  hostapi.txt
src/hostapi/asio/: TODO.md  bw-asio-il.cpp  bw-asio-il.h  bw-asio.c  bw-asio.cpp  bw-asio.h  bw_asio.c  bw_asio.h
src/hostapi/dsound/: bw-dsound.c  bw-dsound.h  bw_dsound.c  bw_dsound.h
src/hostapi/jack/: bw-jack.c  bw-jack.cpp  bw-jack.h
src/hostapi/wasapi/: bw-wasapi.c  bw-wasapi.h  bw_wasapi.c  bw_wasapi.h
src/parser/: TODO.md  wav.cpp  wav.h
src/process/: bw-fft.c  bw-fft.h  bw-process.c  bw-process.h  fft.c  fft.h  mixer.c  mixer.h  process.c  process.cpp  process.h
src/ui/: application.cpp  application.h  bw-colors.h  bw-kb.c  bw-kb.h  bw-mixer-ui.c  bw-mixer-ui.h  bw-mouse.c  bw-mouse.h  bw-popup-win32.c  bw-popup.h  bw-style.cpp  bw-style.h  bw-toggle-cluster.c  bw-toggle-cluster.h  bw-toplevel-ui.h  bw-ui-components.c  bw-ui-components.h  bw-ui-comps.cpp  bw-ui-comps.h  bw-ui-types.h  bw-ui.c  bw-ui.cpp  bw-window.c  bw-window.h  prompts.cpp  prompts.h  render-frame.cpp  render-frame.h  style.cpp  style.h  ui-comps.cpp  ui-comps.h  ui-layout.md
src/ui/windows/: bw-playlist.cpp  bw-settings.cpp  mixer.cpp  playlist.cpp  settings.cpp
src/util/: bw-config.c  bw-conversions.c  bw-dynamic-array.c  bw-log.c  bw-schedule.c  bw-threads.c  bw-types.c  config.c  conversions.c  log.c  schedule.c  serializer.c  threads.c  types.c
src/util/structs/: bw-circ-buf.c  bw-circ-buf.h  bw-dynamic-array.c  bw-dynamic-array.h  circ-buf.c  circ-buf.h  dynamic-array.c  dynamic-array.h
structs/: audio_structs.zig
structures/: circular_buffer.cpp  circular_buffer.h  test  test.cpp
